# CodingExercises

./: CMakeLists.txt
src/: RK2.cpp  SC1095PolarData.h  blade.hpp  bladeelement.hpp  constants.hpp  deneme.cpp  deneme.m  deneme2.cpp  denemeBET.cpp  denemeBET2.cpp  denemeBET3.cpp  denemeCode.cpp  main.cpp  particle.hpp  rotor.hpp  vtksettings.hpp
